// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationMenuVertical renders 1`] = `
@media  {
  :root,
  .t-kAUxbu {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --default-ratios: [object Object];
    --colors-textForeground: hsl(0, 0%, 12%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textPlaceholder: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 73%);
    --colors-grey600: hsl(0, 0%, 62%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(211, 100%, 88%);
    --colors-blue500: hsl(212, 100%, 80%);
    --colors-blue600: hsl(213, 100%, 71%);
    --colors-blue700: hsl(214, 100%, 58%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 78%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(227, 57%, 11%);
    --colors-purple100: hsl(282, 100%, 98%);
    --colors-purple200: hsl(270, 100%, 95%);
    --colors-purple300: hsl(271, 100%, 92%);
    --colors-purple400: hsl(270, 100%, 89%);
    --colors-purple500: hsl(270, 90%, 81%);
    --colors-purple600: hsl(271, 97%, 69%);
    --colors-purple700: hsl(273, 84%, 47%);
    --colors-purple800: hsl(273, 94%, 48%);
    --colors-purple900: hsl(268, 79%, 42%);
    --colors-purple1000: hsl(266, 82%, 32%);
    --colors-purple1100: hsl(265, 63%, 23%);
    --colors-purple1200: hsl(265, 61%, 14%);
    --colors-cyan100: hsl(198, 100%, 97%);
    --colors-cyan200: hsl(199, 100%, 94%);
    --colors-cyan300: hsl(201, 100%, 89%);
    --colors-cyan400: hsl(200, 100%, 84%);
    --colors-cyan500: hsl(201, 96%, 73%);
    --colors-cyan600: hsl(202, 85%, 60%);
    --colors-cyan700: hsl(204, 81%, 46%);
    --colors-cyan800: hsl(205, 100%, 38%);
    --colors-cyan900: hsl(206, 100%, 30%);
    --colors-cyan1000: hsl(205, 100%, 21%);
    --colors-cyan1100: hsl(206, 97%, 15%);
    --colors-cyan1200: hsl(207, 73%, 9%);
    --colors-green100: hsl(135, 80%, 96%);
    --colors-green200: hsl(135, 72%, 92%);
    --colors-green300: hsl(135, 68%, 83%);
    --colors-green400: hsl(135, 65%, 76%);
    --colors-green500: hsl(136, 56%, 62%);
    --colors-green600: hsl(137, 42%, 49%);
    --colors-green700: hsl(138, 51%, 35%);
    --colors-green800: hsl(138, 68%, 29%);
    --colors-green900: hsl(138, 74%, 21%);
    --colors-green1000: hsl(138, 89%, 14%);
    --colors-green1100: hsl(135, 91%, 9%);
    --colors-green1200: hsl(123, 56%, 6%);
    --colors-magenta100: hsl(330, 100%, 99%);
    --colors-magenta200: hsl(329, 100%, 96%);
    --colors-magenta300: hsl(332, 100%, 92%);
    --colors-magenta400: hsl(333, 100%, 90%);
    --colors-magenta500: hsl(333, 90%, 80%);
    --colors-magenta600: hsl(333, 87%, 72%);
    --colors-magenta700: hsl(333, 75%, 59%);
    --colors-magenta800: hsl(333, 69%, 49%);
    --colors-magenta900: hsl(333, 74%, 36%);
    --colors-magenta1000: hsl(333, 86%, 25%);
    --colors-magenta1100: hsl(333, 95%, 16%);
    --colors-magenta1200: hsl(334, 62%, 10%);
    --colors-red100: hsl(0, 100%, 99%);
    --colors-red200: hsl(0, 100%, 96%);
    --colors-red300: hsl(357, 100%, 93%);
    --colors-red400: hsl(356, 100%, 90%);
    --colors-red500: hsl(356, 96%, 83%);
    --colors-red600: hsl(357, 90%, 73%);
    --colors-red700: hsl(357, 80%, 59%);
    --colors-red800: hsl(357, 76%, 49%);
    --colors-red900: hsl(357, 73%, 37%);
    --colors-red1000: hsl(357, 79%, 26%);
    --colors-red1100: hsl(357, 91%, 17%);
    --colors-red1200: hsl(357, 73%, 10%);
    --colors-teal100: hsl(180, 83%, 95%);
    --colors-teal200: hsl(180, 75%, 88%);
    --colors-teal300: hsl(180, 71%, 78%);
    --colors-teal400: hsl(179, 70%, 71%);
    --colors-teal500: hsl(179, 65%, 52%);
    --colors-teal600: hsl(179, 76%, 41%);
    --colors-teal700: hsl(179, 91%, 31%);
    --colors-teal800: hsl(178, 100%, 25%);
    --colors-teal900: hsl(180, 100%, 18%);
    --colors-teal1000: hsl(183, 100%, 13%);
    --colors-teal1100: hsl(187, 92%, 10%);
    --colors-teal1200: hsl(186, 56%, 7%);
    --colors-orange100: hsl(38, 100%, 95%);
    --colors-orange200: hsl(38, 100%, 90%);
    --colors-orange300: hsl(37, 100%, 84%);
    --colors-orange400: hsl(36, 96%, 78%);
    --colors-orange500: hsl(33, 100%, 67%);
    --colors-orange600: hsl(31, 97%, 57%);
    --colors-orange700: hsl(30, 92%, 46%);
    --colors-orange800: hsl(29, 100%, 43%);
    --colors-orange900: hsl(27, 100%, 36%);
    --colors-orange1000: hsl(24, 100%, 26%);
    --colors-orange1100: hsl(20, 97%, 15%);
    --colors-orange1200: hsl(20, 96%, 11%);
    --colors-yellow100: hsl(53, 94%, 93%);
    --colors-yellow200: hsl(54, 92%, 85%);
    --colors-yellow300: hsl(54, 92%, 75%);
    --colors-yellow400: hsl(52, 97%, 63%);
    --colors-yellow500: hsl(51, 100%, 46%);
    --colors-yellow600: hsl(49, 100%, 39%);
    --colors-yellow700: hsl(48, 100%, 35%);
    --colors-yellow800: hsl(46, 100%, 30%);
    --colors-yellow900: hsl(44, 100%, 22%);
    --colors-yellow1000: hsl(44, 100%, 18%);
    --colors-yellow1100: hsl(41, 100%, 11%);
    --colors-yellow1200: hsl(39, 100%, 8%);
    --colors-lime100: hsl(73, 94%, 93%);
    --colors-lime200: hsl(73, 94%, 87%);
    --colors-lime300: hsl(73, 90%, 77%);
    --colors-lime400: hsl(74, 82%, 69%);
    --colors-lime500: hsl(74, 68%, 58%);
    --colors-lime600: hsl(74, 77%, 41%);
    --colors-lime700: hsl(75, 100%, 31%);
    --colors-lime800: hsl(75, 100%, 27%);
    --colors-lime900: hsl(75, 100%, 19%);
    --colors-lime1000: hsl(75, 100%, 15%);
    --colors-lime1100: hsl(75, 100%, 9%);
    --colors-lime1200: hsl(74, 100%, 6%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 62%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-primaryLight: hsl(215, 100%, 98%);
    --colors-primary: hsl(217, 92%, 51%);
    --colors-primaryMid: hsl(223, 78%, 44%);
    --colors-primaryDark: hsl(228, 82%, 35%);
    --colors-secondary: hsl(204, 100%, 72%);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --colors-glBlueLight: hsl(222, 68%, 78%);
    --colors-glBluePrimary: hsl(222, 56%, 55%);
    --colors-glBlueDark: hsl(222, 35%, 43%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'Space Grotesk', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
    --ratios-16-9: 16/9;
    --ratios-3-2: 3/2;
    --ratios-4-3: 4/3;
    --ratios-1-1: 1/1;
    --ratios-3-4: 3/4;
  }

  .t-gwhiDE {
    --colors-text: var(--colors-foreground);
    --colors-background: var(--colors-base1);
    --colors-backgroundHover: var(--colors-base2);
    --colors-backgroundActive: var(--colors-base3);
    --colors-textSelected: var(--colors-accent9);
    --colors-backgroundSelected: var(--colors-accent2);
  }
}

@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-dfGGHW {
    font-weight: var(--navigation-menu-vertical-item-font-weight);
    line-height: 1.2;
  }

  .c-bcEwPX {
    padding: var(--space-2);
    border: none;
    outline: none;
    font: inherit;
    color: var(--colors-text);
    background: var(--colors-background);
    text-align: inherit;
    text-decoration: unset;
    cursor: pointer;
    border-radius: var(--radii-2);
    display: flex;
    align-items: center;
    padding-left: var(--navigation-menu-vertical-item-pl);
    width: 100%;
    --navigation-menu-vertical-item-font-weight: 400;
  }

  .c-bcEwPX[data-active] {
    background: var(--colors-backgroundSelected);
    color: var(--colors-textSelected);
    --navigation-menu-vertical-item-font-weight: 600;
  }

  .c-bcEwPX[data-state=open] {
    --navigation-menu-vertical-item-font-weight: 600;
  }

  .c-bcEwPX[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-bcEwPX:not([data-disabled]):hover {
    background: var(--colors-backgroundHover);
  }

  .c-bcEwPX:not([data-disabled]):active {
    background: var(--colors-backgroundActive);
  }

  .c-bcEwPX:not([data-disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-hYRCfV {
    padding: 0;
    margin: 0;
    list-style: none;
    --navigation-menu-vertical-item-pl: var(--space-4);
  }

  .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-5);
  }

  .c-hYRCfV .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-7);
  }

  .c-hYRCfV .c-hYRCfV .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-8);
  }

  .c-hYRCfV > *:not(:first-child) {
    margin-top: var(--space-0);
  }

  .c-fGHEql {
    width: 100%;
  }
}

@media  {
  .c-dhzjXW-jroWjL-align-center {
    align-items: center;
  }

  .c-dhzjXW-kaVYFn-gap-2 {
    gap: var(--space-2);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bcEwPX-jLELKD-size-lg {
    min-height: var(--sizes-5);
  }
}

<nav
  aria-label="Main"
  class="c-fGHEql t-gwhiDE"
  data-orientation="vertical"
  dir="ltr"
>
  <div
    style="position: relative;"
  >
    <ul
      class="c-hYRCfV"
      data-orientation="vertical"
      dir="ltr"
    >
      <li
        class="c-PJLV"
      >
        <button
          aria-current="page"
          class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
          data-active=""
          data-radix-collection-item=""
          type="button"
        >
          <div
            class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
          >
            <span
              class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
            >
              Button
            </span>
          </div>
        </button>
      </li>
      <li
        class="c-PJLV"
      >
        <a
          class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
          data-radix-collection-item=""
          href="/somewhere"
        >
          <div
            class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
          >
            <span
              class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
            >
              Relative Link
            </span>
          </div>
        </a>
      </li>
      <li
        class="c-PJLV"
      >
        <a
          class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
          data-radix-collection-item=""
          href="http://google.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
          >
            <span
              class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
            >
              External Link
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`NavigationMenuVertical renders accordion and interacts correctly 1`] = `
@media  {
  :root,
  .t-kAUxbu {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --default-ratios: [object Object];
    --colors-textForeground: hsl(0, 0%, 12%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textPlaceholder: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 73%);
    --colors-grey600: hsl(0, 0%, 62%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(211, 100%, 88%);
    --colors-blue500: hsl(212, 100%, 80%);
    --colors-blue600: hsl(213, 100%, 71%);
    --colors-blue700: hsl(214, 100%, 58%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 78%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(227, 57%, 11%);
    --colors-purple100: hsl(282, 100%, 98%);
    --colors-purple200: hsl(270, 100%, 95%);
    --colors-purple300: hsl(271, 100%, 92%);
    --colors-purple400: hsl(270, 100%, 89%);
    --colors-purple500: hsl(270, 90%, 81%);
    --colors-purple600: hsl(271, 97%, 69%);
    --colors-purple700: hsl(273, 84%, 47%);
    --colors-purple800: hsl(273, 94%, 48%);
    --colors-purple900: hsl(268, 79%, 42%);
    --colors-purple1000: hsl(266, 82%, 32%);
    --colors-purple1100: hsl(265, 63%, 23%);
    --colors-purple1200: hsl(265, 61%, 14%);
    --colors-cyan100: hsl(198, 100%, 97%);
    --colors-cyan200: hsl(199, 100%, 94%);
    --colors-cyan300: hsl(201, 100%, 89%);
    --colors-cyan400: hsl(200, 100%, 84%);
    --colors-cyan500: hsl(201, 96%, 73%);
    --colors-cyan600: hsl(202, 85%, 60%);
    --colors-cyan700: hsl(204, 81%, 46%);
    --colors-cyan800: hsl(205, 100%, 38%);
    --colors-cyan900: hsl(206, 100%, 30%);
    --colors-cyan1000: hsl(205, 100%, 21%);
    --colors-cyan1100: hsl(206, 97%, 15%);
    --colors-cyan1200: hsl(207, 73%, 9%);
    --colors-green100: hsl(135, 80%, 96%);
    --colors-green200: hsl(135, 72%, 92%);
    --colors-green300: hsl(135, 68%, 83%);
    --colors-green400: hsl(135, 65%, 76%);
    --colors-green500: hsl(136, 56%, 62%);
    --colors-green600: hsl(137, 42%, 49%);
    --colors-green700: hsl(138, 51%, 35%);
    --colors-green800: hsl(138, 68%, 29%);
    --colors-green900: hsl(138, 74%, 21%);
    --colors-green1000: hsl(138, 89%, 14%);
    --colors-green1100: hsl(135, 91%, 9%);
    --colors-green1200: hsl(123, 56%, 6%);
    --colors-magenta100: hsl(330, 100%, 99%);
    --colors-magenta200: hsl(329, 100%, 96%);
    --colors-magenta300: hsl(332, 100%, 92%);
    --colors-magenta400: hsl(333, 100%, 90%);
    --colors-magenta500: hsl(333, 90%, 80%);
    --colors-magenta600: hsl(333, 87%, 72%);
    --colors-magenta700: hsl(333, 75%, 59%);
    --colors-magenta800: hsl(333, 69%, 49%);
    --colors-magenta900: hsl(333, 74%, 36%);
    --colors-magenta1000: hsl(333, 86%, 25%);
    --colors-magenta1100: hsl(333, 95%, 16%);
    --colors-magenta1200: hsl(334, 62%, 10%);
    --colors-red100: hsl(0, 100%, 99%);
    --colors-red200: hsl(0, 100%, 96%);
    --colors-red300: hsl(357, 100%, 93%);
    --colors-red400: hsl(356, 100%, 90%);
    --colors-red500: hsl(356, 96%, 83%);
    --colors-red600: hsl(357, 90%, 73%);
    --colors-red700: hsl(357, 80%, 59%);
    --colors-red800: hsl(357, 76%, 49%);
    --colors-red900: hsl(357, 73%, 37%);
    --colors-red1000: hsl(357, 79%, 26%);
    --colors-red1100: hsl(357, 91%, 17%);
    --colors-red1200: hsl(357, 73%, 10%);
    --colors-teal100: hsl(180, 83%, 95%);
    --colors-teal200: hsl(180, 75%, 88%);
    --colors-teal300: hsl(180, 71%, 78%);
    --colors-teal400: hsl(179, 70%, 71%);
    --colors-teal500: hsl(179, 65%, 52%);
    --colors-teal600: hsl(179, 76%, 41%);
    --colors-teal700: hsl(179, 91%, 31%);
    --colors-teal800: hsl(178, 100%, 25%);
    --colors-teal900: hsl(180, 100%, 18%);
    --colors-teal1000: hsl(183, 100%, 13%);
    --colors-teal1100: hsl(187, 92%, 10%);
    --colors-teal1200: hsl(186, 56%, 7%);
    --colors-orange100: hsl(38, 100%, 95%);
    --colors-orange200: hsl(38, 100%, 90%);
    --colors-orange300: hsl(37, 100%, 84%);
    --colors-orange400: hsl(36, 96%, 78%);
    --colors-orange500: hsl(33, 100%, 67%);
    --colors-orange600: hsl(31, 97%, 57%);
    --colors-orange700: hsl(30, 92%, 46%);
    --colors-orange800: hsl(29, 100%, 43%);
    --colors-orange900: hsl(27, 100%, 36%);
    --colors-orange1000: hsl(24, 100%, 26%);
    --colors-orange1100: hsl(20, 97%, 15%);
    --colors-orange1200: hsl(20, 96%, 11%);
    --colors-yellow100: hsl(53, 94%, 93%);
    --colors-yellow200: hsl(54, 92%, 85%);
    --colors-yellow300: hsl(54, 92%, 75%);
    --colors-yellow400: hsl(52, 97%, 63%);
    --colors-yellow500: hsl(51, 100%, 46%);
    --colors-yellow600: hsl(49, 100%, 39%);
    --colors-yellow700: hsl(48, 100%, 35%);
    --colors-yellow800: hsl(46, 100%, 30%);
    --colors-yellow900: hsl(44, 100%, 22%);
    --colors-yellow1000: hsl(44, 100%, 18%);
    --colors-yellow1100: hsl(41, 100%, 11%);
    --colors-yellow1200: hsl(39, 100%, 8%);
    --colors-lime100: hsl(73, 94%, 93%);
    --colors-lime200: hsl(73, 94%, 87%);
    --colors-lime300: hsl(73, 90%, 77%);
    --colors-lime400: hsl(74, 82%, 69%);
    --colors-lime500: hsl(74, 68%, 58%);
    --colors-lime600: hsl(74, 77%, 41%);
    --colors-lime700: hsl(75, 100%, 31%);
    --colors-lime800: hsl(75, 100%, 27%);
    --colors-lime900: hsl(75, 100%, 19%);
    --colors-lime1000: hsl(75, 100%, 15%);
    --colors-lime1100: hsl(75, 100%, 9%);
    --colors-lime1200: hsl(74, 100%, 6%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 62%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-primaryLight: hsl(215, 100%, 98%);
    --colors-primary: hsl(217, 92%, 51%);
    --colors-primaryMid: hsl(223, 78%, 44%);
    --colors-primaryDark: hsl(228, 82%, 35%);
    --colors-secondary: hsl(204, 100%, 72%);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --colors-glBlueLight: hsl(222, 68%, 78%);
    --colors-glBluePrimary: hsl(222, 56%, 55%);
    --colors-glBlueDark: hsl(222, 35%, 43%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'Space Grotesk', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
    --ratios-16-9: 16/9;
    --ratios-3-2: 3/2;
    --ratios-4-3: 4/3;
    --ratios-1-1: 1/1;
    --ratios-3-4: 3/4;
  }

  .t-gwhiDE {
    --colors-text: var(--colors-foreground);
    --colors-background: var(--colors-base1);
    --colors-backgroundHover: var(--colors-base2);
    --colors-backgroundActive: var(--colors-base3);
    --colors-textSelected: var(--colors-accent9);
    --colors-backgroundSelected: var(--colors-accent2);
  }
}

@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-dfGGHW {
    font-weight: var(--navigation-menu-vertical-item-font-weight);
    line-height: 1.2;
  }

  .c-bcEwPX {
    padding: var(--space-2);
    border: none;
    outline: none;
    font: inherit;
    color: var(--colors-text);
    background: var(--colors-background);
    text-align: inherit;
    text-decoration: unset;
    cursor: pointer;
    border-radius: var(--radii-2);
    display: flex;
    align-items: center;
    padding-left: var(--navigation-menu-vertical-item-pl);
    width: 100%;
    --navigation-menu-vertical-item-font-weight: 400;
  }

  .c-bcEwPX[data-active] {
    background: var(--colors-backgroundSelected);
    color: var(--colors-textSelected);
    --navigation-menu-vertical-item-font-weight: 600;
  }

  .c-bcEwPX[data-state=open] {
    --navigation-menu-vertical-item-font-weight: 600;
  }

  .c-bcEwPX[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-bcEwPX:not([data-disabled]):hover {
    background: var(--colors-backgroundHover);
  }

  .c-bcEwPX:not([data-disabled]):active {
    background: var(--colors-backgroundActive);
  }

  .c-bcEwPX:not([data-disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-hYRCfV {
    padding: 0;
    margin: 0;
    list-style: none;
    --navigation-menu-vertical-item-pl: var(--space-4);
  }

  .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-5);
  }

  .c-hYRCfV .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-7);
  }

  .c-hYRCfV .c-hYRCfV .c-hYRCfV .c-hYRCfV {
    --navigation-menu-vertical-item-pl: var(--space-8);
  }

  .c-hYRCfV > *:not(:first-child) {
    margin-top: var(--space-0);
  }

  .c-fGHEql {
    width: 100%;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jTrYmp {
    flex-shrink: 0;
    transition: transform 300ms;
  }

  [data-state="open"] > .c-jTrYmp {
    transform: rotate(180deg);
  }
}

@media  {
  .c-dhzjXW-jroWjL-align-center {
    align-items: center;
  }

  .c-dhzjXW-kaVYFn-gap-2 {
    gap: var(--space-2);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-bcEwPX-jLELKD-size-lg {
    min-height: var(--sizes-5);
  }

  .c-dhzjXW-knmidH-justify-space-between {
    justify-content: space-between;
  }

  .c-dhzjXW-dvnNgW-gap-3 {
    gap: var(--space-3);
  }

  .c-dbrbZt-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }
}

<div>
  <nav
    aria-label="Main"
    class="c-fGHEql t-gwhiDE"
    data-orientation="vertical"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="c-hYRCfV"
        data-orientation="vertical"
        dir="ltr"
      >
        <li
          class="c-PJLV"
        >
          <button
            aria-current="page"
            class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
            data-active=""
            data-radix-collection-item=""
            type="button"
          >
            <div
              class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
            >
              <span
                class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
              >
                Button
              </span>
            </div>
          </button>
        </li>
        <li
          class="c-PJLV"
        >
          <a
            class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
            data-radix-collection-item=""
            href="/somewhere"
          >
            <div
              class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
            >
              <span
                class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
              >
                Relative Link
              </span>
            </div>
          </a>
        </li>
        <li
          class="c-PJLV"
        >
          <a
            class="c-bcEwPX c-bcEwPX-jLELKD-size-lg"
            data-radix-collection-item=""
            href="http://google.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
            >
              <span
                class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
              >
                External Link
              </span>
            </div>
          </a>
        </li>
        <li
          class="c-PJLV"
          data-state="open"
        >
          <button
            aria-controls="radix-0"
            aria-expanded="true"
            class="c-dhzjXW c-dhzjXW-knmidH-justify-space-between c-dhzjXW-jroWjL-align-center c-dhzjXW-dvnNgW-gap-3 c-bcEwPX c-bcEwPX-jLELKD-size-lg"
            data-radix-collection-item=""
            data-state="open"
            data-testid="accordion-trigger"
            type="button"
          >
            <div
              class="c-dhzjXW c-dhzjXW-jroWjL-align-center c-dhzjXW-kaVYFn-gap-2"
            >
              <span
                class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dfGGHW"
              >
                Accordion Trigger
              </span>
            </div>
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-jTrYmp"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 10 12 16 18 10"
              />
            </svg>
          </button>
          <div
            class="c-PJLV"
            data-state="open"
            data-testid="accordion-content"
            id="radix-0"
            style="transition-duration: 0s; animation-name: none;"
          >
            <div
              style="position: relative;"
            >
              <ul
                class="c-hYRCfV"
                data-orientation="vertical"
                dir="ltr"
              >
                Accordion Content
              </ul>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
